- Añadido el control de tiempos de ejecución en la clase Preprocessor. - Recogidos los parámetros de la etapa de preprocesamiento en el método obtainText() de la clase Recognizer.

--- a/trunk/doc/latex/_preprocessor_8cpp.tex
+++ b/trunk/doc/latex/_preprocessor_8cpp.tex
@@ -1,6 +1,6 @@
 \hypertarget{_preprocessor_8cpp}{
 \section{Preprocessor.cpp File Reference}
-\label{_preprocessor_8cpp}\index{Preprocessor.cpp(137)@{Preprocessor.cpp(137)}}
+\label{_preprocessor_8cpp}\index{Preprocessor.cpp(138)@{Preprocessor.cpp(138)}}
 }
 
 
@@ -12,17 +12,17 @@ Implementation of the class \hyperlink{class_preprocessor}{Preprocessor}.
 Definition in file \hyperlink{_preprocessor_8cpp-source}{Preprocessor.cpp}.
 
 {\tt \#include \char`\"{}Preprocessor.h\char`\"{}}\par
-{\tt \#include \char`\"{}Clip.h\char`\"{}}\par
 {\tt \#include $<$cmath$>$}\par
 {\tt \#include $<$vector$>$}\par
 {\tt \#include $<$algorithm$>$}\par
-{\tt \#include $<$iostream$>$}\par
+{\tt \#include \char`\"{}Clip.h\char`\"{}}\par
+{\tt \#include \char`\"{}boost/timer.hpp\char`\"{}}\par
 
 
 Include dependency graph for Preprocessor.cpp:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=228pt]{_preprocessor_8cpp__incl}
+\includegraphics[width=246pt]{_preprocessor_8cpp__incl}
 \end{center}
 \end{figure}
