--- a/trunk/doc/latex/class_statistics.tex
+++ b/trunk/doc/latex/class_statistics.tex
@@ -115,7 +115,9 @@ Returns the elapsed time in the reference gray level of the background finding a
 \item[Date:]2008-10-08 \end{Desc}
 
 
-Definition at line 146 of file Statistics.h.\hypertarget{class_statistics_ca10ccbc4137e9ad184ff6dc9a3e5a46}{
+Definition at line 146 of file Statistics.h.
+
+Referenced by Recognizer::obtainText().\hypertarget{class_statistics_ca10ccbc4137e9ad184ff6dc9a3e5a46}{
 \index{Statistics@{Statistics}!optimalThresholdComputingTime@{optimalThresholdComputingTime}}
 \index{optimalThresholdComputingTime@{optimalThresholdComputingTime}!Statistics@{Statistics}}
 \subsubsection[optimalThresholdComputingTime]{\setlength{\rightskip}{0pt plus 5cm}double Statistics::optimalThresholdComputingTime () const\hspace{0.3cm}{\tt  \mbox{[}inline\mbox{]}}}}
@@ -132,7 +134,9 @@ Returns the elapsed time in the optimal threshold computing algorithm.
 \item[Date:]2008-10-08 \end{Desc}
 
 
-Definition at line 155 of file Statistics.h.\hypertarget{class_statistics_25b35c7f7f33d55ee86f4e7ba6cd0c48}{
+Definition at line 155 of file Statistics.h.
+
+Referenced by Recognizer::obtainText().\hypertarget{class_statistics_25b35c7f7f33d55ee86f4e7ba6cd0c48}{
 \index{Statistics@{Statistics}!noiseRemovalTime@{noiseRemovalTime}}
 \index{noiseRemovalTime@{noiseRemovalTime}!Statistics@{Statistics}}
 \subsubsection[noiseRemovalTime]{\setlength{\rightskip}{0pt plus 5cm}double Statistics::noiseRemovalTime () const\hspace{0.3cm}{\tt  \mbox{[}inline\mbox{]}}}}
@@ -149,7 +153,9 @@ Returns the elapsed time in the noise removal algorithm.
 \item[Date:]2008-10-08 \end{Desc}
 
 
-Definition at line 164 of file Statistics.h.\hypertarget{class_statistics_d88deb57349fedd7035ccffa06b4859b}{
+Definition at line 164 of file Statistics.h.
+
+Referenced by Recognizer::obtainText().\hypertarget{class_statistics_d88deb57349fedd7035ccffa06b4859b}{
 \index{Statistics@{Statistics}!preprocessingTime@{preprocessingTime}}
 \index{preprocessingTime@{preprocessingTime}!Statistics@{Statistics}}
 \subsubsection[preprocessingTime]{\setlength{\rightskip}{0pt plus 5cm}double Statistics::preprocessingTime () const\hspace{0.3cm}{\tt  \mbox{[}inline\mbox{]}}}}
