- Revisado nuevamente el método Recognizer::writeExternalImage() debido a una incongruencia entre la imagen interna y la imagen de salida en un caso concreto al usar JPG. Aún no se ha averiguado cuáles son las causas, ya que es responsabilidad del método Image::write() de ImageMagick. Por el momento todas las imágenes de salida se generarán en formato PNG.

--- a/trunk/doc/latex/class_preprocessor.tex
+++ b/trunk/doc/latex/class_preprocessor.tex
@@ -122,7 +122,9 @@ Returns the optimal threshold found in the last clip used.
 \item[Date:]2008-10-13 \end{Desc}
 
 
-Definition at line 232 of file Preprocessor.hpp.\hypertarget{class_preprocessor_1fc44d7d19944f3c3addd3a576c37414}{
+Definition at line 232 of file Preprocessor.hpp.
+
+Referenced by Recognizer::obtainText().\hypertarget{class_preprocessor_1fc44d7d19944f3c3addd3a576c37414}{
 \index{Preprocessor@{Preprocessor}!optimalThreshold@{optimalThreshold}}
 \index{optimalThreshold@{optimalThreshold}!Preprocessor@{Preprocessor}}
 \subsubsection[optimalThreshold]{\setlength{\rightskip}{0pt plus 5cm}void Preprocessor::optimalThreshold (const unsigned char \& {\em threshold})\hspace{0.3cm}{\tt  \mbox{[}inline\mbox{]}}}}
@@ -159,7 +161,9 @@ Returns the background reference gray level in the last clip used.
 \item[Date:]2008-10-13 \end{Desc}
 
 
-Definition at line 250 of file Preprocessor.hpp.\hypertarget{class_preprocessor_e54e2a5703a0f39ddff8e9936f9a2275}{
+Definition at line 250 of file Preprocessor.hpp.
+
+Referenced by Recognizer::obtainText().\hypertarget{class_preprocessor_e54e2a5703a0f39ddff8e9936f9a2275}{
 \index{Preprocessor@{Preprocessor}!noiseRemovalTime@{noiseRemovalTime}}
 \index{noiseRemovalTime@{noiseRemovalTime}!Preprocessor@{Preprocessor}}
 \subsubsection[noiseRemovalTime]{\setlength{\rightskip}{0pt plus 5cm}const double \& Preprocessor::noiseRemovalTime () const\hspace{0.3cm}{\tt  \mbox{[}inline\mbox{]}}}}
@@ -378,5 +382,5 @@ Referenced by computeOptimalThreshold().
 
 The documentation for this class was generated from the following files:\begin{CompactItemize}
 \item 
-\hyperlink{_preprocessor_8hpp}{Preprocessor.hpp (145)}\item 
-\hyperlink{_preprocessor_8cpp}{Preprocessor.cpp (145)}\end{CompactItemize}
+\hyperlink{_preprocessor_8hpp}{Preprocessor.hpp (148)}\item 
+\hyperlink{_preprocessor_8cpp}{Preprocessor.cpp (148)}\end{CompactItemize}
