--- a/trunk/doc/latex/class_statistics.tex
+++ b/trunk/doc/latex/class_statistics.tex
@@ -218,7 +218,7 @@ Returns the elapsed time while applying the thresholding algorithm.
 
 Definition at line 251 of file Statistics.hpp.
 
-Referenced by Recognizer::obtainText().\hypertarget{class_statistics_dc9b7a52ce3d760815c7f2e4668a931b}{
+Referenced by main(), and Recognizer::obtainText().\hypertarget{class_statistics_dc9b7a52ce3d760815c7f2e4668a931b}{
 \index{Statistics@{Statistics}!floodFillingTime@{floodFillingTime}}
 \index{floodFillingTime@{floodFillingTime}!Statistics@{Statistics}}
 \subsubsection[floodFillingTime]{\setlength{\rightskip}{0pt plus 5cm}const double \& Statistics::floodFillingTime () const\hspace{0.3cm}{\tt  \mbox{[}inline\mbox{]}}}}
@@ -254,7 +254,9 @@ Returns the total elapsed time within the segmentation stage.
 \item[Date:]2008-10-13 \end{Desc}
 
 
-Definition at line 269 of file Statistics.hpp.\hypertarget{class_statistics_f8a60e8a89be8fe8b2c46782681c1a2c}{
+Definition at line 269 of file Statistics.hpp.
+
+Referenced by main().\hypertarget{class_statistics_f8a60e8a89be8fe8b2c46782681c1a2c}{
 \index{Statistics@{Statistics}!backgroundReferenceGrayLevelFindingTime@{backgroundReferenceGrayLevelFindingTime}}
 \index{backgroundReferenceGrayLevelFindingTime@{backgroundReferenceGrayLevelFindingTime}!Statistics@{Statistics}}
 \subsubsection[backgroundReferenceGrayLevelFindingTime]{\setlength{\rightskip}{0pt plus 5cm}void Statistics::backgroundReferenceGrayLevelFindingTime (const double \& {\em time})\hspace{0.3cm}{\tt  \mbox{[}private\mbox{]}}}}
