--- a/trunk/doc/latex/_shape_8cpp.tex
+++ b/trunk/doc/latex/_shape_8cpp.tex
@@ -6,13 +6,14 @@ Definition of \hyperlink{class_shape}{Shape} class.
 
 
 {\tt \#include \char`\"{}Shape.hpp\char`\"{}}\par
+{\tt \#include $<$cmath$>$}\par
 
 
 Include dependency graph for Shape.cpp:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=78pt]{_shape_8cpp__incl}
+\includegraphics[width=100pt]{_shape_8cpp__incl}
 \end{center}
 \end{figure}
 
